--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "embla-carousel-react": "^8.5.1",
     "formik": "^2.4.6",
     "lucide-react": "^0.462.0",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "next": "14.2.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "tailwind-merge": "^2.5.5",
